src/objects/appsolutely__Business_Bank_Account__c.object
<CustomObject>
    <description>Bank account of the retrieved company.</description>
    <fields>
        <fullName>appsolutely__BIC__c</fullName>
        <description>The BIC number for the bank.</description>
        <inlineHelpText>The BIC number for the bank.</inlineHelpText>
        <label>BIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Business_Dossier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business dossier this bank account applies to.</description>
        <label>Business Dossier</label>
        <referenceTo>appsolutely__Business_Dossier__c</referenceTo>
        <relationshipLabel>Business Bank Accounts</relationshipLabel>
        <relationshipName>Business_Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>appsolutely__IBAN__c</fullName>
        <description>The bank account number in IBAN format.</description>
        <inlineHelpText>The bank account number in IBAN format.</inlineHelpText>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Is_IBAN_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the bank account number is a valid bank account number, false otherwise.</description>
        <inlineHelpText>True if the bank account number is a valid bank account number, false otherwise.</inlineHelpText>
        <label>Is IBAN Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Start_Date__c</fullName>
        <description>The date at which the company opened this Bank Account</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Start_Day__c</fullName>
        <description>The day the company opened this Bank Account</description>
        <label>Start Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Start_Month__c</fullName>
        <description>The month the company opened this Bank Account</description>
        <label>Start Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Start_Year__c</fullName>
        <description>The year the company opened this Bank Account</description>
        <label>Start Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Bank Account</label>
    <nameField>
        <label>Business Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>